--- a/style.css
+++ b/style.css
@@ -10,3 +10,16 @@
     --line-color:#ECECEC;
     --borter-color:#EEEEEE;
 }
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
