--- a/style.css
+++ b/style.css
@@ -15,11 +15,23 @@ body {
 }
 
 h1, h2, h3 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
 }
 
 p {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+}
+.king{
+    font-family: Raleway;
+}
+.family{
+    font-family: Raleway;
+}
+.king{
+    font-family: Raleway;
+}
+.king8{
+    font-family: Raleway;
 }
