--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --akcent-color:color: #2196F3;
+    --akcent-color: color:
     --logo-color: #000;
     --main-color: #212121;
     --et-color:#757575;
@@ -14,24 +14,86 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-h1, h2, h3 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-}
+.a{
+    color: #2196F3;
 
-p {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+font-family: Raleway;
+font-size: 26px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.78px;
+
 }
-.king{
-    font-family: Raleway;
+.span-item{
+    color: #000;
+font-family: Raleway;
+font-size: 26px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.78px;
 }
-.family{
-    font-family: Raleway;
+.ul-title{
+    color: #2196F3;
+
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+letter-spacing: 0.28px;
 }
-.king{
-    font-family: Raleway;
+.ul{
+    color: #2196F3;
+
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+letter-spacing: 0.28px;
 }
-.king8{
-    font-family: Raleway;
+.h2{
+    color: #212121;
+
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.42px;
+text-transform: uppercase;
+}
+.p{
+    color: #757575;
+
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 171.429% */
+letter-spacing: 0.42px;
+}
+.h3{
+    color: #212121;
+
+text-align: center;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+letter-spacing: 0.48px;
+}
+.p{
+    color: #757575;
+
+text-align: center;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 0.48px;
 }
