--- a/assets/style.css
+++ b/assets/style.css
@@ -15,14 +15,12 @@ body {
 }
 .link{
     color: #2196F3;
-
 font-family: Raleway;
 font-size: 26px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
 letter-spacing: 0.78px;
-
 }
 .span-item{
     color: #000;
@@ -95,9 +93,11 @@ letter-spacing: 0.48px;
 }
 .section-text{
     color: #757575;
+font-family: Roboto;
 font-size: 16px;
+font-style: normal;
 font-weight: 400;
-line-height: normal;
+line-height: 30px; /* 187.5% */
 letter-spacing: 0.48px;
 }
 .footer-link{
@@ -109,9 +109,9 @@ font-weight: 700;
 line-height: normal;
 letter-spacing: 0.78px;
 }
+
 .section-title1{
     color: #212121;
-text-align: center;
 font-size: 16px;
 font-weight: 500;
 line-height: 26px; /* 162.5% */
