--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ font-family: Raleway;
 font-size: 26px;
 font-style: normal;
 font-weight: 700;
-line-height: normal;
+line-height: 1.36;
 letter-spacing: 0.78px;
 }
 .span-item{
@@ -28,29 +28,28 @@ font-family: Raleway;
 font-size: 26px;
 font-style: normal;
 font-weight: 700;
-line-height: normal;
+line-height: 1.36;
 letter-spacing: 0.78px;
 }
 .ul-title{
     color: #2196F3;
 font-size: 14px;
 font-weight: 500;
-line-height: normal;
+line-height: 1.14;
 letter-spacing: 0.28px
 }
 .title2{
     color: #2196F3;
 font-size: 14px;
 font-weight: 500;
-line-height: normal;
+line-height: 1.14;
 letter-spacing: 0.28px;
 }
 .section-title{
     color: #FFF;
-text-align: center;
 font-size: 44px;
 font-weight: 900;
-line-height: 60px; /* 136.364% */
+line-height: 1.36; /* 136.364% */
 letter-spacing: 2.64px;
 text-transform: uppercase;
 }
@@ -59,14 +58,14 @@ text-transform: uppercase;
     text-align: center;
     font-size: 16px;
     font-weight: 700;
-    line-height: 30px; /* 187.5% */
+    line-height: 1.87; /* 187.5% */
     letter-spacing: 0.96px;
 }
 .list-item{
     color: #212121;
 font-size: 14px;
 font-weight: 700;
-line-height: normal;
+line-height: 2;
 letter-spacing: 0.42px;
 text-transform: uppercase;
 }
@@ -74,21 +73,21 @@ text-transform: uppercase;
     color: #757575;
 font-size: 14px;
 font-weight: 400;
-line-height: 24px; /* 171.429% */
+line-height: 1.71; /* 171.429% */
 letter-spacing: 0.42px;
 }
 .section-item{
     color: #212121;
 font-size: 36px;
 font-weight: 700;
-line-height: normal;
+line-height: 1.18;
 letter-spacing: 1.08px;
 }
 .section-title{
     color: #212121;
 font-size: 16px;
 font-weight: 500;
-line-height: normal;
+line-height: 1.18;
 letter-spacing: 0.48px;
 }
 .section-text{
@@ -97,7 +96,7 @@ font-family: Roboto;
 font-size: 16px;
 font-style: normal;
 font-weight: 400;
-line-height: 30px; /* 187.5% */
+line-height: 1.87; /* 187.5% */
 letter-spacing: 0.48px;
 }
 .footer-link{
@@ -106,7 +105,7 @@ font-family: Raleway;
 font-size: 26px;
 font-style: normal;
 font-weight: 700;
-line-height: normal;
+line-height: 1.36;
 letter-spacing: 0.78px;
 }
 
@@ -114,13 +113,13 @@ letter-spacing: 0.78px;
     color: #212121;
 font-size: 16px;
 font-weight: 500;
-line-height: 26px; /* 162.5% */
+line-height: 1.62; /* 162.5% */
 letter-spacing: 0.48px;
 }
 .ul-title1{
     color: #2196F3;
 font-size: 14px;
 font-weight: 500;
-line-height: normal;
+line-height: 1.14;
 letter-spacing: 0.28px;
 }
