--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root{
-    --akcent-color: color:
+    --akcent-color: #2196F3;
     --logo-color: #000;
     --main-color: #212121;
     --et-color:#757575;
@@ -13,8 +13,8 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
-.link{
-    color: #2196F3;
+.title-link{
+    color: var(--akcent-color);
 font-family: Raleway;
 font-size: 26px;
 font-style: normal;
@@ -22,8 +22,8 @@ font-weight: 700;
 line-height: 1.36;
 letter-spacing: 0.78px;
 }
-.span-item{
-    color: #000;
+.title-item{
+    color: var(--logo-color);
 font-family: Raleway;
 font-size: 26px;
 font-style: normal;
@@ -31,76 +31,61 @@ font-weight: 700;
 line-height: 1.36;
 letter-spacing: 0.78px;
 }
-.ul-title{
-    color: #2196F3;
+.caption1-list{
+    color: var(--main-color);
 font-size: 14px;
 font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.28px
 }
-.title2{
-    color: #2196F3;
+.headline-list{
+    color: var(--akcent-color);
 font-size: 14px;
 font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.28px;
 }
-.section-title{
-    color: #FFF;
+.tagline-title{
+    color: var(--title-color);
 font-size: 44px;
 font-weight: 900;
 line-height: 1.36; /* 136.364% */
 letter-spacing: 2.64px;
 text-transform: uppercase;
 }
-.section-button{
-    color: #FFF;
+.tagline-button{
+    color: var(--tem-background);
     text-align: center;
     font-size: 16px;
     font-weight: 700;
     line-height: 1.87; /* 187.5% */
     letter-spacing: 0.96px;
 }
-.list-item{
-    color: #212121;
+.headline1-btn {
+    color: var(--main-color);
 font-size: 14px;
 font-weight: 700;
 line-height: 2;
 letter-spacing: 0.42px;
 text-transform: uppercase;
 }
-.list-text{
-    color: #757575;
+.subtitle-text{
+    color: var(--et-color);
 font-size: 14px;
 font-weight: 400;
 line-height: 1.71; /* 171.429% */
 letter-spacing: 0.42px;
 }
-.section-item{
-    color: #212121;
-font-size: 36px;
+.subtitle-item{
+    color: var(--main-color);
+ font-size : 36px;
 font-weight: 700;
 line-height: 1.18;
 letter-spacing: 1.08px;
 }
-.section-title{
-    color: #212121;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.18;
-letter-spacing: 0.48px;
-}
-.section-text{
-    color: #757575;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 1.87; /* 187.5% */
-letter-spacing: 0.48px;
-}
+
 .footer-link{
-    color: #2196F3;
+    color: var(--akcent-color);
 font-family: Raleway;
 font-size: 26px;
 font-style: normal;
@@ -109,15 +94,15 @@ line-height: 1.36;
 letter-spacing: 0.78px;
 }
 
-.section-title1{
-    color: #212121;
+.footer-item{
+    color: var(--logo-color);
 font-size: 16px;
 font-weight: 500;
 line-height: 1.62; /* 162.5% */
 letter-spacing: 0.48px;
 }
-.ul-title1{
-    color: #2196F3;
+.heading-list{
+    color: var(--akcent-color);
 font-size: 14px;
 font-weight: 500;
 line-height: 1.14;
