--- a/assets/reset.css
+++ b/assets/reset.css
@@ -13,3 +13,9 @@ img{
 h1,h2,h3,h4,p{
     margin: 0;
 }
+li{
+    text-decoration: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
