--- a/assets/style.css
+++ b/assets/style.css
@@ -136,4 +136,19 @@ letter-spacing: 0.28px;
 .headline-list :hover{
 color: var(--akcent-color);
 }
+.advantages-item{
+    color: var(--logo-color);
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.16;
+    letter-spacing: 1.08px; 
+}
+.subject-item{
+color: var(--logo-color);
+font-size: 36px;
+font-weight: 700;
+line-height: 1.16;
+letter-spacing: 1.08px;
+}
 
