--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,15 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
+.container{
+    width: 1185px;
+    height:px;
+    top: 36px;
+    left: 200px;
+    gap: 0px;
+    opacity: 0px;    
+    outline: 1px solid red;
+  }
 .title-link{
     color: var(--akcent-color);
 font-family: Raleway;
@@ -76,7 +85,10 @@ text-transform: uppercase;
     font-weight: 700;
     line-height: 1.87; /* 187.5% */
     letter-spacing: 0.96px;
-    background: #2196F3
+    background: #2196F3;
+    text-align: center;
+    gap: 692px;
+    
 }
 .headline1-btn :hover{
 background: var(--akcent-color);
@@ -150,5 +162,9 @@ font-size: 36px;
 font-weight: 700;
 line-height: 1.16;
 letter-spacing: 1.08px;
+}
+.tagline{
+    padding-top: 32px;
+    padding-bottom: 200px;
 }
 
