--- a/assets/style.css
+++ b/assets/style.css
@@ -13,15 +13,13 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
-.container{
-    width: 1185px;
-    height:px;
-    top: 36px;
-    left: 200px;
-    gap: 0px;
-    opacity: 0px;    
+.container {
+    width: 1200px;
+    margin: auto;
+    padding-left: 15px;
+    padding-right: 15px;
     outline: 1px solid red;
-  }
+}
 .title-link{
     color: var(--akcent-color);
 font-family: Raleway;
@@ -68,6 +66,7 @@ letter-spacing: 0.28px;
 }
 .tagline{
     background: var(--footer-backgroung);
+  
 }
 .tagline-title{
     color: var(--title-color);
@@ -76,6 +75,7 @@ font-weight: 900;
 line-height: 1.36; /* 136.364% */
 letter-spacing: 2.64px;
 text-transform: uppercase;
+margin-top: 200px ;
 
 }
 .tagline-button{
@@ -87,7 +87,7 @@ text-transform: uppercase;
     letter-spacing: 0.96px;
     background: #2196F3;
     text-align: center;
-    gap: 692px;
+    margin-top: 30px;
     
 }
 .headline1-btn :hover{
@@ -108,6 +108,14 @@ font-weight: 400;
 line-height: 1.71; /* 171.429% */
 letter-spacing: 0.42px;
 }
+.subtitle-item1{
+    margin-top: 94px;
+    color: var(--main-color);
+    font-size : 14px;
+   font-weight: 700;
+   line-height: 1.18;
+   letter-spacing: 1.08px;
+}
 .subtitle-item{
     color: var(--main-color);
  font-size : 14px;
@@ -125,6 +133,16 @@ font-weight: 700;
 line-height: 1.36;
 letter-spacing: 0.78px;
 }
+.subtitle-text1{
+    color: var(--et-color);
+font-size: 14px;
+font-weight: 400;
+line-height: 1.71; /* 171.429% */
+letter-spacing: 0.42px;
+margin-bottom: 94px;
+}
+
+
 
 .footer-item{
     color: var(--title-color);
@@ -134,6 +152,7 @@ letter-spacing: 0.78px;
     font-weight: 700;
     line-height: 1.36;
     letter-spacing: 0.78px;
+    height: 60px;
 }
 .heading-list{
    color: var(--et-color);
@@ -154,7 +173,12 @@ color: var(--akcent-color);
     font-style: normal;
     font-weight: 700;
     line-height: 1.16;
-    letter-spacing: 1.08px; 
+    letter-spacing: 1.08px;
+    margin-top: 94px;
+ margin-bottom: 50px; 
+}
+.advantages-img3{
+margin-bottom: 94px;
 }
 .subject-item{
 color: var(--logo-color);
@@ -162,9 +186,19 @@ font-size: 36px;
 font-weight: 700;
 line-height: 1.16;
 letter-spacing: 1.08px;
+margin-bottom: 50px;
 }
 .tagline{
     padding-top: 32px;
     padding-bottom: 200px;
+}
+.footer{
+    margin-top: 94px;
+}
+.headline1-btn1{
+    margin-top: 94px;
+}
+.headline1-btn2{
+    margin-bottom: 50px;
 }
 
