--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ body {
 }
 .container {
     width: 1200px;
-    margin: auto;
+   margin: auto;
     padding-left: 15px;
     padding-right: 15px;
     outline: 1px solid red;
@@ -54,9 +54,13 @@ font-size: 14px;
 font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.28px
-    }
-
-
+}
+.subtitle{
+    padding-bottom: 94px;
+}
+.advantages{
+    padding-bottom: 94px;
+}
 .headline-list{
     color: var(--et-color);
 font-size: 14px;
@@ -66,7 +70,8 @@ letter-spacing: 0.28px;
 }
 .tagline{
     background: var(--footer-backgroung);
-  
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .tagline-title{
     color: var(--title-color);
@@ -75,8 +80,7 @@ font-weight: 900;
 line-height: 1.36; /* 136.364% */
 letter-spacing: 2.64px;
 text-transform: uppercase;
-margin-top: 200px ;
-
+margin-left: 452px;
 }
 .tagline-button{
     color: var(--tem-background);
@@ -86,9 +90,7 @@ margin-top: 200px ;
     line-height: 1.87; /* 187.5% */
     letter-spacing: 0.96px;
     background: #2196F3;
-    text-align: center;
-    margin-top: 30px;
-    
+   margin-left: 530px;
 }
 .headline1-btn :hover{
 background: var(--akcent-color);
@@ -139,7 +141,6 @@ font-size: 14px;
 font-weight: 400;
 line-height: 1.71; /* 171.429% */
 letter-spacing: 0.42px;
-margin-bottom: 94px;
 }
 
 
@@ -163,6 +164,7 @@ letter-spacing: 0.28px;
 }
 .footer{
     background: var(--footer-backgroung);
+    padding-top: 94px;
 }
 .headline-list :hover{
 color: var(--akcent-color);
@@ -174,11 +176,6 @@ color: var(--akcent-color);
     font-weight: 700;
     line-height: 1.16;
     letter-spacing: 1.08px;
-    margin-top: 94px;
- margin-bottom: 50px; 
-}
-.advantages-img3{
-margin-bottom: 94px;
 }
 .subject-item{
 color: var(--logo-color);
@@ -186,19 +183,8 @@ font-size: 36px;
 font-weight: 700;
 line-height: 1.16;
 letter-spacing: 1.08px;
-margin-bottom: 50px;
 }
-.tagline{
-    padding-top: 32px;
-    padding-bottom: 200px;
-}
-.footer{
-    margin-top: 94px;
-}
-.headline1-btn1{
-    margin-top: 94px;
-}
-.headline1-btn2{
-    margin-bottom: 50px;
-}
+
+
+
 
