--- a/assets/style.css
+++ b/assets/style.css
@@ -1,190 +1,383 @@
-:root{
-    --akcent-color: #2196F3;
+:root {
     --logo-color: #000;
-    --main-color: #212121;
-    --et-color:#757575;
-    --title-color:#FFFFFF;
-    --tem-background:#F5F4FA;
-    --footer-backgroung:#2F303A;
-    --adres-color:rgba(255,255,255,0.60);
-    --line-color:#ECECEC;
-    --borter-color:#EEEEEE;
-}
-body {
-    font-family: 'Roboto', sans-serif;
-}
-.container {
+    --akcent-color: #2196F3;
+    --main-color: #FFFFFF;
+    --text-color: #212121;
+    --footer-color: #2F303A;
+    --section-background: #F5F4FA;
+    --additional-color: #757575;
+    --footertext-color:  rgba(255, 255, 255, 0.60);;
+    --line-color: #ECECEC;
+    --border-card: #EEEEEE;
+  }
+
+  .container {
     width: 1200px;
-   margin: auto;
     padding-left: 15px;
     padding-right: 15px;
+    margin: 0 auto ;
     outline: 1px solid red;
-}
-.title-link{
+  }
+
+  body {
+    font-family: "Roboto";
+  }
+
+  .header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+
+  .header-box {
+    display: flex;
+    align-items: center;
+  }
+  .header-list {
+    display: flex;
+    gap: 50px;
+    margin-left: auto;
+  }
+  .nav-list {
+    display: flex;
+    gap: 50px;
+  }
+  .header-logo {
     color: var(--akcent-color);
-font-family: Raleway;
-font-size: 26px;
-font-style: normal;
-font-weight: 700;
-line-height: 1.36;
-letter-spacing: 0.78px;
-}
-.caption-link{
-    color: var(--title-color);
-font-size: 14px;
-font-weight: 400;
-line-height: 1.71; /* 171.429% */
-letter-spacing: 0.42px;
-}
-.title-item{
+    font-family: Raleway;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.384615385;
+    letter-spacing: 0.78px;
+    margin-right: 93px;
+  }
+  .header-span {
     color: var(--logo-color);
-font-family: Raleway;
-font-size: 26px;
-font-style: normal;
-font-weight: 700;
-line-height: 1.36;
-letter-spacing: 0.78px;
-}
-.caption1-list :hover{
-color: var(--akcent-color);
-}
-    .caption1-list{
-color: var(--main-color);
-font-size: 14px;
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.28px
-}
-.subtitle{
-    padding-bottom: 94px;
-}
-.advantages{
-    padding-bottom: 94px;
-}
-.headline-list{
-    color: var(--et-color);
-font-size: 14px;
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.28px;
-}
-.tagline{
-    background: var(--footer-backgroung);
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-.tagline-title{
-    color: var(--title-color);
-font-size: 44px;
-font-weight: 900;
-line-height: 1.36; /* 136.364% */
-letter-spacing: 2.64px;
-text-transform: uppercase;
-margin-left: 452px;
-}
-.tagline-button{
-    color: var(--tem-background);
+    font-family: Raleway;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.384615385;
+    letter-spacing: 0.78px;
+  }
+
+  .nav-studio {
+    color: var(--text-color);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.142857143;
+    letter-spacing: 0.28px;
+  }
+
+  .nav-studio:hover {
+    color: var(--akcent-color);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.142857143;
+    letter-spacing: 0.28px;
+  }
+
+  .nav-portfolio {
+  color: var(--text-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.142857143;
+  letter-spacing: 0.28px;
+  }
+
+  .nav-portfolio:hover {
+    color: var(--akcent-color);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.142857143;
+    letter-spacing: 0.28px;
+ }
+
+  .nav-contacts {
+  color: var(--text-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.142857143;
+  letter-spacing: 0.28px;
+  }
+
+  .header-gmail {
+  color: var(--additional-color);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.142857143;
+  letter-spacing: 0.28px;
+  }
+
+  .header-gmail:hover {
+    color: var(--akcent-color);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.142857143;
+    letter-spacing: 0.28px;
+    }
+
+  .header-phone {
+    color: var(--additional-color);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.142857143;
+    letter-spacing: 0.28px;
+  }
+
+  .header-phone:hover {
+    color: var(--akcent-color);
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.142857143;
+    letter-spacing: 0.28px;
+  }
+
+  .hero {
+    background: var(--footer-color);
+    padding-top: 200px;
+    padding-bottom: 200px;
+    text-align: center;
+  }
+  .hero-title {
+    color: var(--main-color);
+    text-align: center;
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 1.363636364;
+    letter-spacing: 2.64px;
+    text-transform: uppercase;
+    width: 626px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+  }
+
+  .hero-button {
+    color: var(--main-color);
     text-align: center;
     font-size: 16px;
     font-weight: 700;
-    line-height: 1.87; /* 187.5% */
+    line-height: 1.875; 
     letter-spacing: 0.96px;
-    background: #2196F3;
-   margin-left: 530px;
-}
-.headline1-btn :hover{
-background: var(--akcent-color);
-}
-.headline1-btn {
-    color: var(--main-color);
-font-size: 14px;
-font-weight: 700;
-line-height: 2;
-letter-spacing: 0.42px;
-text-transform: uppercase;
-}
-.subtitle-text{
-    color: var(--et-color);
-font-size: 14px;
-font-weight: 400;
-line-height: 1.71; /* 171.429% */
-letter-spacing: 0.42px;
-}
-.subtitle-item1{
-    margin-top: 94px;
-    color: var(--main-color);
-    font-size : 14px;
-   font-weight: 700;
-   line-height: 1.18;
-   letter-spacing: 1.08px;
-}
-.subtitle-item{
-    color: var(--main-color);
- font-size : 14px;
-font-weight: 700;
-line-height: 1.18;
-letter-spacing: 1.08px;
-}
+    border-radius: 4px;
+    background: var(--akcent-color);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    padding: 10px 32px;
+  }
+  
+  .section-main {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  
+  .section-title {
+    color: var(--text-color);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 1.142857143;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+  }
 
-.footer-link{
+  .section-desc {
+    color: var(--additional-color);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.714285714;
+    letter-spacing: 0.42px;
+    width: 270px;
+    margin-top: 10px;
+  }
+
+  .section-list {
+    display: flex;
+    gap: 30px;
+  }
+  .whatwedo {
+    padding-bottom: 94px;
+  }
+
+  .whatwedo-title {
+    color: var(--text-color);
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.166666667;
+    letter-spacing: 1.08px;
+  }
+
+  .whatwedo-list {
+    margin-top: 50px;
+    display: flex;
+    gap: 30px;
+  }
+  .ourteam {
+    background-color: var(--section-background);
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
+  
+
+  .ourteam-title {
+    color: var(--text-color);
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.166666667;
+    letter-spacing: 1.08px;
+    margin-bottom: 50px;
+  }
+
+  .ourteam-box {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .ourteam-text {
+    color: var(--text-color);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.1875;
+    letter-spacing: 0.48px;
+  }
+
+  .ourteam-desc {
+    color: var(--additional-color);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.1875;
+    letter-spacing: 0.48px;
+    padding-top: 10px;
+  }
+  .ourteam-list {
+    display: flex;
+    gap: 30px;
+  }
+
+  .ourteam-img {
+    width: 270px;
+  }
+
+  .ourteam-item {
+    background-color: var(--main-color);
+  }
+  .footer {
+    background: var(--footer-color);
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .footer-adress {
+    margin-top: 20px;
+  }
+
+  .footer-adress-link {
+    color: var(--main-color);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.714285714;
+    letter-spacing: 0.42px;
+  }
+
+  .footer-gmail {
+    color: var(--footertext-color);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.714285714;
+    letter-spacing: 0.42px;
+  }
+
+  .footer-phone {
+    color: var(--footertext-color);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.714285714; 
+    letter-spacing: 0.42px;
+ 
+  }
+
+  .footer-logo {
     color: var(--akcent-color);
-font-family: Raleway;
-font-size: 26px;
-font-style: normal;
-font-weight: 700;
-line-height: 1.36;
-letter-spacing: 0.78px;
-}
-.subtitle-text1{
-    color: var(--et-color);
-font-size: 14px;
-font-weight: 400;
-line-height: 1.71; /* 171.429% */
-letter-spacing: 0.42px;
-}
-
-
-
-.footer-item{
-    color: var(--title-color);
     font-family: Raleway;
     font-size: 26px;
-    font-style: normal;
     font-weight: 700;
-    line-height: 1.36;
+    line-height: 1.384615385;
     letter-spacing: 0.78px;
-    height: 60px;
-}
-.heading-list{
-   color: var(--et-color);
-font-size: 14px;
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.28px;
-}
-.footer{
-    background: var(--footer-backgroung);
-    padding-top: 94px;
-}
-.headline-list :hover{
-color: var(--akcent-color);
-}
-.advantages-item{
-    color: var(--logo-color);
-    font-size: 36px;
-    font-style: normal;
+  }
+  .footer-span {
+    color: var(--main-color);
+    font-family: Raleway;
+    font-size: 26px;
     font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: 1.08px;
-}
-.subject-item{
-color: var(--logo-color);
-font-size: 36px;
-font-weight: 700;
-line-height: 1.16;
-letter-spacing: 1.08px;
-}
+    line-height: 1.384615385;
+    letter-spacing: 0.78px;
+  }
+
+  .footer-list {
+    margin-top: 9px;
+  }
+
+  .footer-item {
+    margin-bottom: 9px;
+  }
+
+  .footer-item:nth-child(2) {
+    margin-bottom: 0px;
+  }
 
 
-
-
+  .hero {
+    background: #FFF;
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  
+  .hero-button {
+     color: #212121;
+     text-align: center;
+     font-size: 16px;
+     font-weight: 500;
+     line-height: 1.625; 
+     letter-spacing: 0.48px;
+     border-radius: 4px;
+     background: #F5F4FA;
+  }
+ 
+  .hero .hero-button:hover {
+     color: #FFF;
+     text-align: center;
+     font-size: 16px;
+     font-weight: 500;
+     line-height: 1.625;
+     letter-spacing: 0.48px;
+     border-radius: 4px;
+     background: #2196F3;
+     box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
+  }
+ 
+  .main-text {
+     color: #212121;
+     font-size: 18px;
+     font-weight: 700;
+     line-height: 2; 
+     letter-spacing: 1.08px;
+  }
+  
+  .main-desc {
+     color: #757575;
+     font-size: 16px;
+     font-weight: 400;
+     line-height: 1.875; 
+     letter-spacing: 0.48px;
+  }   
+  .hero{
+    background-color: var(--footer-color);
+  }  
+  .hero-button{
+    background: var(--akcent-color);
+  }
+    
