--- a/assets/style.css
+++ b/assets/style.css
@@ -211,18 +211,27 @@ letter-spacing: 0.28px;
     letter-spacing: 0.28px;
  }
 
-.headline-button {
-  color: var(--text-color);
+.headline-button{
+  color: #212121;
   text-align: center;
   font-size: 16px;
-  font-weight: 700;
-  line-height: 1.875; 
-  letter-spacing: 0.96px;
+  font-weight: 500;
+  line-height: 1.625; 
+  letter-spacing: 0.48px;
   border-radius: 4px;
-  background: var(--main-color);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  padding: 10px 32px;
-}
+  background: #F5F4FA;
+ }
+
+.headline-button :hover{
+  color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.625;
+    letter-spacing: 0.48px;
+    border-radius: 4px;
+    background: #2196F3;
+    box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);}
 .hero-button{
     color: var(--main-color);
     text-align: center;
@@ -235,7 +244,6 @@ letter-spacing: 0.28px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     padding: 10px 32px;
   } 
-
 .section-main {
   padding-top: 94px;
   padding-bottom: 94px;
