--- a/assets/style.css
+++ b/assets/style.css
@@ -11,62 +11,16 @@
   --border-card: #EEEEEE;
 }
 
-.hero {
-  background: #FFF;
-  padding-top: 94px;
-  padding-bottom: 94px;
+body {
+  font-family: "Roboto";
 }
 
-.hero-button {
-   color: #212121;
-   text-align: center;
-   font-size: 16px;
-   font-weight: 500;
-   line-height: 1.625; 
-   letter-spacing: 0.48px;
-   border-radius: 4px;
-   background: #F5F4FA;
-}
-
-.hero .hero-button:hover {
-   color: #FFF;
-   text-align: center;
-   font-size: 16px;
-   font-weight: 500;
-   line-height: 1.625;
-   letter-spacing: 0.48px;
-   border-radius: 4px;
-   background: #2196F3;
-   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
-}
-
-.main-text {
-  color: #212121;
-  font-family: Roboto;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 2; /* 200% */
-  letter-spacing: 1.08px;
-}
-
-.main-desc {
-  color: #757575;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.875; 
-  letter-spacing: 0.48px;
-}
 .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto ;
   outline: 1px solid red;
-}
-
-body {
-  font-family: "Roboto";
 }
 
 .header {
@@ -83,10 +37,7 @@ body {
   gap: 50px;
   margin-left: auto;
 }
-.nav-list {
-  display: flex;
-  gap: 50px;
-}
+
 .header-logo {
   color: var(--akcent-color);
   font-family: Raleway;
@@ -122,11 +73,16 @@ body {
 }
 
 .nav-portfolio {
-
+color: var(--text-color);
 font-size: 14px;
 font-weight: 500;
 line-height: 1.142857143;
 letter-spacing: 0.28px;
+}
+
+.nav-list {
+  display: flex;
+  gap: 50px;
 }
 
 .nav-portfolio:hover {
@@ -196,54 +152,21 @@ letter-spacing: 0.28px;
   margin-right: auto;
   margin-bottom: 30px;
 }
-.nav-portfolio {
-  color: var(--text-color);
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.142857143;
-  letter-spacing: 0.28px;
-  }
-  .nav-portfolio:hover {
-    color: var(--akcent-color);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.142857143;
-    letter-spacing: 0.28px;
- }
 
-.headline-button{
-  color: #212121;
+.hero-button {
+  color: var(--main-color);
   text-align: center;
   font-size: 16px;
-  font-weight: 500;
-  line-height: 1.625; 
-  letter-spacing: 0.48px;
+  font-weight: 700;
+  line-height: 1.875; 
+  letter-spacing: 0.96px;
   border-radius: 4px;
-  background: #F5F4FA;
- }
+  background: var(--akcent-color);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 10px 32px;
+  border: none;
+}
 
-.headline-button :hover{
-  color: #FFF;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.625;
-    letter-spacing: 0.48px;
-    border-radius: 4px;
-    background: #2196F3;
-    box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);}
-.hero-button{
-    color: var(--main-color);
-    text-align: center;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.875; 
-    letter-spacing: 0.96px;
-    border-radius: 4px;
-    background: var(--akcent-color);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    padding: 10px 32px;
-  } 
 .section-main {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -407,8 +330,4 @@ letter-spacing: 0.28px;
 
 .footer-item:nth-child(2) {
   margin-bottom: 0px;
-}       
-  
-
-
-    
+}
