--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -1,8 +1,8 @@
 .hero1 {
     background: #FFF;
-    text-align: center;
     padding-top: 94px;
     padding-bottom: 94px;
+    text-align: left;
   }
   
   .hero1-button {
@@ -18,6 +18,11 @@
     border: none;
     box-shadow: none;;
 }
+.button-box {
+  justify-content: center;
+  display: flex;
+  gap: 8px;
+} 
   
 .hero1-button:hover {
      color: #FFF;
@@ -37,6 +42,8 @@
      font-weight: 700;
      line-height: 2; 
      letter-spacing: 1.08px;
+     width: 322px;
+
   }
   .main-img{
     width: 370px;
@@ -59,9 +66,9 @@
   }
   .main-item {   
     border: 1px solid #EEE;
-    background: #FFF;
     width: 370px;
     height: 404px;
+      flex-basis: calc((100% - 60px) /3);
   }
  
   .button-box {
@@ -69,3 +76,11 @@
     display: flex;
     gap: 8px;
  }
+ .main-box {
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border: 1px solid #EEE;
+  background: #FFF;
+}
