--- a/assets/style.css
+++ b/assets/style.css
@@ -261,6 +261,36 @@ letter-spacing: 0.28px;
 .ourteam-img {
   width: 270px;
 }
+.section-item::before {
+  content: " ";
+  display: block;
+  width: 270px;
+  height: 120px;
+  background-color: var(--section-background);
+  margin-bottom: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-image: none;
+  
+}
+
+.section-item:first-child::before {
+  background-image: url(../img/antenna.png);
+}
+
+.section-item:nth-child(2)::before {
+  background-image: url(../img/clock.png);
+}
+
+.section-item:nth-child(3)::before {
+  background-image: url(../img/diagram.png);
+}
+
+.section-item:nth-child(4)::before {
+  background-image: url(../img/astronaut.png);
+}
+
 
 .ourteam-item {
   background-color: var(--main-color);
