--- a/assets/style.css
+++ b/assets/style.css
@@ -134,7 +134,6 @@ letter-spacing: 0.28px;
 }
 
 .hero {
-  background: var(--footer-color);
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
@@ -165,6 +164,9 @@ letter-spacing: 0.28px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   padding: 10px 32px;
   border: none;
+}
+.hero-button:hover{
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .section-main {
@@ -261,6 +263,12 @@ letter-spacing: 0.28px;
 .ourteam-img {
   width: 270px;
 }
+.ourteam-item {
+  background-color: var(--main-color);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+
+}
 .section-item::before {
   content: " ";
   display: block;
@@ -273,6 +281,13 @@ letter-spacing: 0.28px;
   background-size: auto;
   background-image: none;
   
+}
+.hero{
+  /* background-image: url(../img/hero.webp); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: linear-gradient rgba((47, 48, 58, 0.40),rgba(47, 48, 58, 0.40)), url("../img/hero.webp");
 }
 
 .section-item:first-child::before {
