--- a/assets/style.css
+++ b/assets/style.css
@@ -287,7 +287,7 @@ letter-spacing: 0.28px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: linear-gradient rgba((47, 48, 58, 0.40),rgba(47, 48, 58, 0.40)), url("../img/hero.webp");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url("../img/hero.webp")
 }
 
 .section-item:first-child::before {
