--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@
   --footertext-color:  rgba(255, 255, 255, 0.60);;
   --line-color: #ECECEC;
   --border-card: #EEEEEE;
+  --svg-color: #AFB1B8;
 }
 
 body {
@@ -283,7 +284,7 @@ body {
 
 .ourteam-box {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 16px;
 }
 
 .ourteam-text {
@@ -318,6 +319,37 @@ body {
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
 }
+
+.linkbox-roster {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-bottom: 30px;
+}
+
+.roster-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.roster-link:hover {
+  background: var(--akcent-color);
+  .roster-image {
+    fill: var(--main-color);
+  }
+}
+
+
+.roster-image {
+  width: 20px;
+  height: 20px;
+ fill: var(--svg-color);
+}
+
 .footer {
   background: var(--footer-color);
   padding-top: 60px;
