--- a/assets/style.css
+++ b/assets/style.css
@@ -284,7 +284,7 @@ body {
 
 .ourteam-box {
   padding-top: 30px;
-  padding-bottom: 16px;
+  padding-bottom: 30px;
 }
 
 .ourteam-text {
@@ -305,6 +305,7 @@ body {
   letter-spacing: 0.48px;
   margin-top: 10px;
 }
+
 .ourteam-list {
   display: flex;
   gap: 30px;
@@ -320,11 +321,11 @@ body {
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
 }
 
-.linkbox-roster {
+.ourteam-roster {
   display: flex;
   justify-content: center;
   gap: 10px;
-  padding-bottom: 30px;
+  margin-top: 16px;
 }
 
 .roster-link {
@@ -336,18 +337,72 @@ body {
   align-items: center;
 }
 
-.roster-link:hover {
+.roster-link:hover,
+.roster-link:focus {
   background: var(--akcent-color);
   .roster-image {
     fill: var(--main-color);
   }
 }
 
-
 .roster-image {
   width: 20px;
   height: 20px;
- fill: var(--svg-color);
+  fill: var(--svg-color);
+}
+
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.clients-title {
+  color: var(--text-color);
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.08px;
+  margin-bottom: 50px;
+}
+
+.clients-schedule {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.schedule-link {
+  display: block;
+  width: 170px;
+  height: 92px;
+  border-radius: 4px;
+  border: 1px solid var(--svg-color);
+  padding: 16px 32px 16px 32px;
+}
+
+.schedule-image {
+  width: 106px;
+  height: 60px;
+  fill: var(--svg-color);
+}
+
+.other-size {
+  padding: 24.7px 42.56px 26.68px 43px;
+}
+
+.fooster_peters {
+  width: 84px;
+  height: 40px;
+}
+
+.schedule-link:hover,
+.schedule-link:focus {
+  border: 1px solid var(--akcent-color);
+  .schedule-image {
+    fill: var(--akcent-color);
+  }
 }
 
 .footer {
@@ -359,6 +414,7 @@ body {
 .footerbox {
   display: flex;
   gap: 70px;
+  align-items: baseline;
 }
 
 .footer-adress {
@@ -422,10 +478,6 @@ body {
   margin-bottom: 0px;
 }
 
-.footer-links {
-  margin-top: 12px;
-}
-
 .links-title {
   color: var(--main-color);
   font-size: 14px;
@@ -452,8 +504,9 @@ body {
   align-items: center;
 }
 
-.active {
-  background: var(--akcent-color)
+.checklist-link:hover
+,.checklist-link:focus {
+  background: var(--akcent-color);
 }
 
 .checklist-image {
@@ -461,3 +514,4 @@ body {
   height: 20px;
   fill: var(--main-color);
 }
+
