--- a/assets/style.css
+++ b/assets/style.css
@@ -162,6 +162,7 @@ body {
   background-size: cover;
 
 }
+
 .hero-title {
   color: var(--main-color);
   text-align: center;
@@ -265,6 +266,26 @@ body {
   margin-top: 50px;
   display: flex;
   gap: 30px;
+}
+
+.whatwedo-item {
+  position: relative;
+}
+
+.whatwedo-desc {
+  color: var(--main-color);
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0px;
+  width: 370px;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.80);
+  padding: 27px 0px;
 }
 
 .ourteam {
