--- a/assets/style.css
+++ b/assets/style.css
@@ -767,7 +767,9 @@ textarea {
  top: 50%;
  left: 12px;
  pointer-events: none;
- transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition-property: fill;
+ transition-duration: 250ms;
+ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-textarea {
@@ -779,7 +781,9 @@ textarea {
   outline: transparent;
   margin-bottom: 20px;
   resize: none;
-
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
