--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,5 @@
 @import "./sections/footer";
 @import "./sections/modal";
 @import "./sections/portfolio";
+@import './utilit/placeholder';
+@import "./utilit/mixin"
