--- a/css/main.css
+++ b/css/main.css
@@ -257,8 +257,8 @@ img {
 }
 .mob-menu .container {
   position: relative;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: start;
