--- a/sass/sections/_mob-menu.scss
+++ b/sass/sections/_mob-menu.scss
@@ -1,4 +1,3 @@
-
 .mob-menu {
   position: fixed;
   width: 100vw;
@@ -8,8 +7,8 @@
   z-index: 1;
   .container {
     position: relative;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
